websocket config